--- a/views/date.erb
+++ b/views/date.erb
@@ -1,4 +1,4 @@
 <h1>Today</h1>
 
-<% @date = DateTime.new("%A, %B %e, %y") %>
+<% @date = DateTime.new.strftime("%A, %B %e, %y") %>
 <p> <%= @date %> </p>
